added data base and emp page and chart info etc.....

--- a/goodrProj/Shared/NavMenu.razor
+++ b/goodrProj/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span aria-hidden="true"></span> <span style=" font-size: 30px">⛈  </span>  Weather API
             </NavLink>
         </div>
+            <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Employees">
+                <span class=" oi oi-list-rich" aria-hidden="true"></span>Employee database 
+            </NavLink>
+        </div>
     </nav>
 </div>
 
